integ-tests/tests/snapshots/parser__bad_leading_zeros__two_zeros.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ two_zeros:1:6
  │
1 │ a = 00
  │      ^ unable to parse number


